client/src/App.css
/********************* common ***********************/

html,
body {
  padding: 0;
  margin: 0;
  font-family: "Exo 2";
  /* font-family: "Acme", sans-serif; */
  /* font-family: "Roboto", sans-serif; */
}

main {
  padding-top: 70px;
  max-width: 100vw;
  background-color: #f5f5f5;
}

section {
  padding: 20px 0;
}

@media screen and (max-width: 1199px) {
  main {
    padding-top: 60px;
  }
}

@media screen and (max-width: 991px) {
  main {
    padding-top: 120px;
  }
}

p,
span,
i,
h1,
h2,
h3,
h4,
h5,
h6 {
  padding: 0;
  margin: 0;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

.btn:focus,
.btn:active,
.btn:hover,
.btn {
  box-shadow: none;
}

.vCenterContents {
  display: flex;
  align-items: center;
}

.hCenterContents {
  display: flex;
  justify-content: center;
}

.themeColorHoverBtn {
  background-color: #fff;
  color: #122;
  border: 1px solid #122;
}

.themeColorHoverBtn:hover {
  background-color: #122;
  color: #fff;
}

.themeColorHoverBtn:focus {
  box-shadow: none;
}

/********************* header ***********************/

header {
  position: fixed;
  width: 100%;
  height: 70px;
  color: #fff;
  background-color: #122;
  z-index: 1;
}

header a {
  text-decoration: none;
  color: white;
}

header a:hover {
  text-decoration: none;
  color: white;
}

.headerItem {
  /* position: relative; */
  /* display: block; */
  height: 70px;
  background-color: #122;
  border-right: 1px solid #344;
}

.headerItem:hover {
  background-color: #233;
}

.headerMenuItem {
  float: left;
  width: 70px;
  display: none;
}

.headerLeft {
  float: left;
  width: 300px;
}

.headerRight {
  float: right;
  width: 200px;
  /* font-weight: bold; */
  font-size: 25px;
  cursor: pointer;
}

.headerSearchItemBig {
  width: calc(100% - 700px);
  /* min-width: 300px; */
  float: left;
  padding: 15px 50px;
}

.headerSearchItemSmall {
  display: none;
}

header .searchInput {
  height: 40px;
  font-size: 20px;
}

.leftNavbar {
  position: fixed;
  left: 0;
  top: 0;
  height: 100vh;
  width: 420px;
  color: #000;
  background-color: #fff;
  z-index: 1;
  box-shadow: 5px 0 10px black;
}

.leftNavbarEmptySpace {
  position: fixed;
  right: 0;
  top: 0;
  height: 100vh;
  width: calc(100% - 420px);
  background-color: #fff1;
  z-index: 1;
}

.cart {
  position: fixed;
  right: 0;
  top: 0;
  height: 100%;
  width: 420px;
  color: #000;
  background-color: #eee;
  z-index: 2;
  box-shadow: -5px 0 10px black;
}

.cartEmptySpace {
  position: fixed;
  left: 0;
  top: 0;
  height: 100%;
  width: calc(100% - 420px);
  background-color: #000a;
  z-index: 2 !important;
}

.cartHeading {
  padding: 10px;
  background-color: #122;
  color: white;
  font-size: 30px;
  height: 70px;
}

.cartBackArrow {
  float: left;
  font-size: 35px;
  font-weight: bold;
  background-color: #1225;
  width: 50px;
  height: 50px;
  color: #fff;
  border-radius: 25px;
  cursor: pointer;
  display: none;
}

.cartBackArrow:hover {
  background-color: #233;
}

.cartMain {
  overflow-y: auto;
  overflow-x: hidden;
  height: calc(100vh - 70px - 78px);
}

.billContainer {
  width: 100%;
  padding: 10px 20px;
  background-color: #fff;
  margin-bottom: 10px;
}

.productsInCartContainer {
  width: 100%;
  background-color: #fff;
  padding: 10px 0;
}

.cartFooter {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 20px;
  background-color: #fff;
}

.cartProductCard {
  height: 130px;
  cursor: pointer;
  padding: 5px;
  box-shadow: 0 0 2px -1px #000;
}

.cartProductCard:hover {
  box-shadow: 0 0 3px -1px #000;
}

.cartProductCard .imageContainer {
  margin: 0 auto;
  height: 100px;
  width: 100px;
}

.cartProductCard .colInRow {
  padding: 10px;
}

.cartProductCard .imageContainer img {
  margin-top: 5%;
  height: 95%;
  width: 100%;
  transition: 500ms;
}

.cartProductCard:hover .imageContainer img {
  margin-top: 0%;
}

.cartProductCard .productName {
  color: #555;
  font-size: 15px;
}

.cartProductCard .productPrice {
  color: #555;
  font-size: 18px;
  float: left;
  margin-right: 5px;
}

.cartProductCard .fa-times {
  color: #555;
  font-size: 12px;
  padding: 0 5px;
}

.cartProductCard .btn-group {
  margin-left: 5px;
}

.cartProductCard .btn-group button {
  padding: 0 5px;
  font-size: 14px;
}

.cartFinalProductPrice {
  float: right;
  margin-right: 20px;
  font-weight: bold;
}

@media screen and (max-width: 1199px) {
  header {
    height: 60px;
  }

  .headerItem {
    height: 60px;
  }

  .headerLeft {
    width: 220px;
  }

  .headerRight {
    width: 160px;
    font-size: 20px;
  }

  .headerSearchItemBig {
    width: calc(100% - 540px);
    padding: 15px 40px;
  }

  header .searchInput {
    height: 30px;
    font-size: 18px;
  }
}

@media screen and (max-width: 991px) {
  .headerMenuItem {
    display: flex;
  }

  .headerLeft {
    width: 220px;
  }

  .headerRight {
    width: 160px;
    font-size: 20px;
  }

  header .myAcc {
    display: none;
  }

  .headerSearchItemBig {
    display: none;
    width: calc(100% - 540px);
    padding: 15px 40px;
    display: none;
  }

  .headerSearchItemSmall {
    display: flex;
    width: 100%;
    padding: 15px 40px;
  }

  header .searchInput {
    height: 30px;
    font-size: 18px;
    width: 90vw;
  }
}

@media screen and (max-width: 575px) {
  header {
    height: 16vw;
  }

  .swasthifyLogo {
    width: 30vw;
  }

  .headerItem {
    height: 12vw;
    padding: 20px;
  }

  .headerLeft {
    width: auto;
  }

  .headerRight {
    width: auto;
  }

  .cart {
    width: 100%;
  }

  .cartEmptySpace {
    width: 0;
  }

  .leftNavbar {
    width: 80%;
  }

  .leftNavbarEmptySpace {
    width: 20%;
  }

  .cartBackArrow {
    display: block;
  }

  .cartProductCard .productPrice {
    padding-top: 0.5vw;
    font-size: 15px;
  }

  .cartProductCard .fa-times {
    padding: 2vw 0 0;
  }

  .cartProductCard .btn-group button {
    padding: 0 3px;
    font-size: 12px;
  }
}
/* ... */

